--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -2,5 +2,5 @@ FROM nvidia/cuda:12.1-cudnn8-runtime-ubuntu22.04
 RUN apt-get update && apt-get install -y python3 python3-pip ffmpeg && rm -rf /var/lib/apt/lists/*
 RUN pip install faster-whisper
 WORKDIR /app
-COPY split.py .
-ENTRYPOINT ["python3", "split.py"]
+COPY videocatalog.py .
+ENTRYPOINT ["python3", "videocatalog.py"]
