Multi-video support with grouped gallery

--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -1,4 +1,5 @@
 FROM nvidia/cuda:12.1-cudnn8-runtime-ubuntu22.04
+ENV PYTHONUNBUFFERED=1
 RUN apt-get update && apt-get install -y python3 python3-pip ffmpeg && rm -rf /var/lib/apt/lists/*
 RUN pip install faster-whisper
 WORKDIR /app
