--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -1,7 +1,10 @@
 FROM nvidia/cuda:12.1-cudnn8-runtime-ubuntu22.04
 ENV PYTHONUNBUFFERED=1
-RUN apt-get update && apt-get install -y python3 python3-pip ffmpeg && rm -rf /var/lib/apt/lists/*
-RUN pip install faster-whisper
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+RUN apt-get update && apt-get install -y python3.11 python3.11-venv ffmpeg && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
+COPY pyproject.toml uv.lock ./
+RUN uv sync --frozen --no-dev --no-install-project --python python3.11
 COPY videocatalog.py .
-ENTRYPOINT ["python3", "videocatalog.py"]
+RUN uv sync --frozen --no-dev --python python3.11
+ENTRYPOINT ["uv", "run", "videocatalog"]
