--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "videocatalog"
 version = "0.1.0"
 description = "Split videos at recording boundaries and generate searchable gallery"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
     "faster-whisper>=1.0.0",
 ]
@@ -13,3 +13,9 @@ videocatalog = "videocatalog:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv]
+environments = [
+    "sys_platform == 'darwin'",
+    "sys_platform == 'linux'",
+]
