Improve scene detection accuracy with cluster scoring and histogram verification
- Use cluster totals (sum of all detections in same second) instead of max score
- Add histogram comparison to filter false positives (robust to camera motion)
- Fix audio detection bug: compare consecutive entries not consecutive seconds
- Add --limit flag to process only first N seconds for testing
- Require max_score >= 8 in cluster, apply histogram check only for borderline cases
- Add opencv-python-headless dependency for histogram comparison

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "av==16.0.1",  # 16.1.0 lacks Linux py3.12 wheels
     "fastapi>=0.115.0",
     "uvicorn>=0.32.0",
+    "opencv-python-headless>=4.12.0.88",
 ]
 
 [project.scripts]
