--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.115.0",
     "uvicorn>=0.32.0",
     "opencv-python-headless>=4.12.0.88",
+    "pillow>=11.0.0",
 ]
 
 [project.scripts]
