--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "uvicorn>=0.32.0",
     "opencv-python-headless>=4.12.0.88",
     "pillow>=11.0.0",
+    "jinja2>=3.1.0",
 ]
 
 [project.scripts]
